Add bunch of CLI tools for Kafka tests
Includes topic creation, producer and consumer group management

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 
 # Dependency directories (remove the comment below to include it)
 vendor/
+consumer/consumer
+producer/cmd/create-topics/create-topics
+producer/cmd/producer/producer
